# Ignite-Transcriptions

./: .env.example  .gitignore  Ignite-Transcriptions-mac.spec  Ignite-Transcriptions.spec  README.md  panopto_links.txt  pyproject.toml  sync_course.py
.github/workflows/: build.yml
