[tool.poetry]
name = "ignite-transcriptions"
version = "0.1.0"
description = "Download Panopto lecture transcripts via Selenium DOM scraping"
authors = ["Maor"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.20"
webdriver-manager = "^4.0"
keyring = "^25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
pyinstaller = {version = ">=6.0", python = ">=3.11,<3.15"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
